fixing text for dropdown info

--- a/index.html
+++ b/index.html
@@ -263,8 +263,8 @@
             <h3>Bubbles</h3>
             <p>Loves quiet naps and snuggles.</p>
             <div class="cat-details">
-                <p><strong>Breed:</strong> Persian</p>
-                <p><strong>Age:</strong> 4 years</p>
+                <p><strong>Breed:</strong>  Maine Coon</p>
+                <p><strong>Age:</strong> 1 years</p>
                 <p><strong>Additional:</strong> Prefers calm environments</p>
             </div>
         </div>
@@ -273,7 +273,7 @@
             <h3>Mittens</h3>
             <p>Curious and adventurous.</p>
             <div class="cat-details">
-                <p><strong>Breed:</strong> Maine Coon</p>
+                <p><strong>Breed:</strong>Domestic Shorthair</p>
                 <p><strong>Age:</strong> 1 year</p>
                 <p><strong>Additional:</strong> Loves climbing</p>
             </div>
@@ -283,8 +283,8 @@
             <h3>Marshmallow</h3>
             <p>Sweet and gentle nature.</p>
             <div class="cat-details">
-                <p><strong>Breed:</strong> Ragdoll</p>
-                <p><strong>Age:</strong> 3 years</p>
+                <p><strong>Breed:</strong> Domestic Shorthair</p>
+                <p><strong>Age:</strong> 1 years</p>
                 <p><strong>Additional:</strong> Great with kids</p>
             </div>
         </div>
@@ -294,7 +294,7 @@
             <p>Full of energy and mischief.</p>
             <div class="cat-details">
                 <p><strong>Breed:</strong> Domestic Shorthair</p>
-                <p><strong>Age:</strong> 2 years</p>
+                <p><strong>Age:</strong> 3 years</p>
                 <p><strong>Additional:</strong> Loves chasing toys</p>
             </div>
         </div>
@@ -303,8 +303,8 @@
             <h3>Socks</h3>
             <p>Shy but loving once she warms up.</p>
             <div class="cat-details">
-                <p><strong>Breed:</strong> Siamese</p>
-                <p><strong>Age:</strong> 5 years</p>
+                <p><strong>Breed:</strong> Domestic Shorthair</p>
+                <p><strong>Age:</strong> 3 years</p>
                 <p><strong>Additional:</strong> Needs a quiet home</p>
             </div>
         </div>
@@ -320,7 +320,7 @@
             <h3>Coco</h3>
             <p>Sweet and always by your side.</p>
             <div class="dog-details">
-                <p><strong>Breed:</strong> Golden Retriever</p>
+                <p><strong>Breed:</strong> Mut</p>
                 <p><strong>Age:</strong> 3 years</p>
                 <p><strong>Additional:</strong> Loves fetch and long walks</p>
             </div>
@@ -330,8 +330,8 @@
             <h3>Cupcake</h3>
             <p>Loyal and loves attention.</p>
             <div class="dog-details">
-                <p><strong>Breed:</strong> Poodle</p>
-                <p><strong>Age:</strong> 2 years</p>
+                <p><strong>Breed:</strong>Chiuahua</p>
+                <p><strong>Age:</strong> 4 years</p>
                 <p><strong>Additional:</strong> Hypoallergenic, great for families</p>
             </div>
         </div>
@@ -340,7 +340,7 @@
             <h3>Buttons</h3>
             <p>Curious and loves to explore.</p>
             <div class="dog-details">
-                <p><strong>Breed:</strong> Beagle</p>
+                <p><strong>Breed:</strong>Australian Shepherd Mix</p>
                 <p><strong>Age:</strong> 1 year</p>
                 <p><strong>Additional:</strong> Has a keen sense of smell</p>
             </div>
@@ -350,7 +350,7 @@
             <h3>Peaches</h3>
             <p>Friendly, with a little sass.</p>
             <div class="dog-details">
-                <p><strong>Breed:</strong> Dachshund</p>
+                <p><strong>Breed:</strong> Mut</p>
                 <p><strong>Age:</strong> 4 years</p>
                 <p><strong>Additional:</strong> Prefers being the center of attention</p>
             </div>
@@ -360,8 +360,8 @@
             <h3>Twix</h3>
             <p>Gentle and loves belly rubs.</p>
             <div class="dog-details">
-                <p><strong>Breed:</strong> Labrador</p>
-                <p><strong>Age:</strong> 5 years</p>
+                <p><strong>Breed:</strong> Mut</p>
+                <p><strong>Age:</strong> 1 year</p>
                 <p><strong>Additional:</strong> Great with kids and other pets</p>
             </div>
         </div>
@@ -370,8 +370,8 @@
             <h3>Churro</h3>
             <p>Independent, but loves company.</p>
             <div class="dog-details">
-                <p><strong>Breed:</strong> Shiba Inu</p>
-                <p><strong>Age:</strong> 2 years</p>
+                <p><strong>Breed:</strong> Begal</p>
+                <p><strong>Age:</strong> 1 year</p>
                 <p><strong>Additional:</strong> Enjoys quiet time and companionship</p>
             </div>
         </div>
@@ -426,7 +426,7 @@
             <h3>Peep</h3>
             <p>Loving little chirper.</p>
             <div class="other-details">
-                <p><strong>Species:</strong> Finch</p>
+                <p><strong>Species:</strong> Parakeet</p>
                 <p><strong>Age:</strong> 1 year</p>
                 <p><strong>Additional:</strong> Enjoys sunflower seeds</p>
             </div>
@@ -436,7 +436,7 @@
             <h3>Sunny</h3>
             <p>Soft and chatty.</p>
             <div class="other-details">
-                <p><strong>Species:</strong> Canary</p>
+                <p><strong>Species:</strong> Parakeet</p>
                 <p><strong>Age:</strong> 2 years</p>
                 <p><strong>Additional:</strong> Loves being in sunny spots</p>
             </div>
