adding full size images

--- a/index.html
+++ b/index.html
@@ -244,12 +244,14 @@
   <p class="volunteer-contact">For more details, please contact us at <a href="mailto:volunteer@welovepets.com">volunteer@welovepets.com</a>.</p>
 </div>
 
-   <section id="cats">
+<section id="cats">
     <h2>Cats Available for Adoption</h2>
     <p>Location: NY</p>
     <div class="cat-grid">
         <div class="cat-box">
-            <img src="cat1.png" alt="Cat 1">
+            <a href="cat1-fullsize.png" target="_blank">
+                <img src="cat1.png" alt="Cat 1">
+            </a>
             <h3>Cinnamon</h3>
             <p>Playful and affectionate.</p>
             <div class="cat-details">
@@ -259,37 +261,45 @@
             </div>
         </div>
         <div class="cat-box">
-            <img src="cat2.png" alt="Cat 2">
+            <a href="cat2-fullsize.png" target="_blank">
+                <img src="cat2.png" alt="Cat 2">
+            </a>
             <h3>Bubbles</h3>
             <p>Loves quiet naps and snuggles.</p>
             <div class="cat-details">
                 <p><strong>Breed:</strong>  Maine Coon</p>
-                <p><strong>Age:</strong> 1 years</p>
+                <p><strong>Age:</strong> 1 year</p>
                 <p><strong>Additional:</strong> Prefers calm environments</p>
             </div>
         </div>
         <div class="cat-box">
-            <img src="cat3.png" alt="Cat 3">
+            <a href="cat3-fullsize.png" target="_blank">
+                <img src="cat3.png" alt="Cat 3">
+            </a>
             <h3>Mittens</h3>
             <p>Curious and adventurous.</p>
             <div class="cat-details">
-                <p><strong>Breed:</strong>Domestic Shorthair</p>
+                <p><strong>Breed:</strong> Domestic Shorthair</p>
                 <p><strong>Age:</strong> 1 year</p>
                 <p><strong>Additional:</strong> Loves climbing</p>
             </div>
         </div>
         <div class="cat-box">
-            <img src="cat4.png" alt="Cat 4">
+            <a href="cat4-fullsize.png" target="_blank">
+                <img src="cat4.png" alt="Cat 4">
+            </a>
             <h3>Marshmallow</h3>
             <p>Sweet and gentle nature.</p>
             <div class="cat-details">
                 <p><strong>Breed:</strong> Domestic Shorthair</p>
-                <p><strong>Age:</strong> 1 years</p>
+                <p><strong>Age:</strong> 1 year</p>
                 <p><strong>Additional:</strong> Great with kids</p>
             </div>
         </div>
         <div class="cat-box">
-            <img src="cat5.png" alt="Cat 5">
+            <a href="cat5-fullsize.png" target="_blank">
+                <img src="cat5.png" alt="Cat 5">
+            </a>
             <h3>Boots</h3>
             <p>Full of energy and mischief.</p>
             <div class="cat-details">
@@ -299,7 +309,9 @@
             </div>
         </div>
         <div class="cat-box">
-            <img src="cat6.png" alt="Cat 6">
+            <a href="cat6-fullsize.png" target="_blank">
+                <img src="cat6.png" alt="Cat 6">
+            </a>
             <h3>Socks</h3>
             <p>Shy but loving once she warms up.</p>
             <div class="cat-details">
@@ -310,7 +322,6 @@
         </div>
     </div>
 </section>
-
 <section id="dogs">
     <h2>Dogs Available for Adoption</h2>
     <p>Location: NY</p>
