--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
     <p>Location: NY</p>
     <div class="cat-grid">
         <div class="cat-box">
-            <a href="cat1-fullsize.png" target="_blank">
+            <a href="cat1.png" target="_blank">
                 <img src="cat1.png" alt="Cat 1">
             </a>
             <h3>Cinnamon</h3>
@@ -261,7 +261,7 @@
             </div>
         </div>
         <div class="cat-box">
-            <a href="cat2-fullsize.png" target="_blank">
+            <a href="cat2.png" target="_blank">
                 <img src="cat2.png" alt="Cat 2">
             </a>
             <h3>Bubbles</h3>
@@ -273,7 +273,7 @@
             </div>
         </div>
         <div class="cat-box">
-            <a href="cat3-fullsize.png" target="_blank">
+            <a href="cat3.png" target="_blank">
                 <img src="cat3.png" alt="Cat 3">
             </a>
             <h3>Mittens</h3>
@@ -285,7 +285,7 @@
             </div>
         </div>
         <div class="cat-box">
-            <a href="cat4-fullsize.png" target="_blank">
+            <a href="cat4.png" target="_blank">
                 <img src="cat4.png" alt="Cat 4">
             </a>
             <h3>Marshmallow</h3>
@@ -297,7 +297,7 @@
             </div>
         </div>
         <div class="cat-box">
-            <a href="cat5-fullsize.png" target="_blank">
+            <a href="cat5.png" target="_blank">
                 <img src="cat5.png" alt="Cat 5">
             </a>
             <h3>Boots</h3>
@@ -309,7 +309,7 @@
             </div>
         </div>
         <div class="cat-box">
-            <a href="cat6-fullsize.png" target="_blank">
+            <a href="cat6.png" target="_blank">
                 <img src="cat6.png" alt="Cat 6">
             </a>
             <h3>Socks</h3>
