fixing all the images to be full screen

--- a/index.html
+++ b/index.html
@@ -327,7 +327,9 @@
     <p>Location: NY</p>
     <div class="dog-grid">
         <div class="dog-box">
-            <img src="dog1.png" alt="Dog 1">
+            <a href="dog1.png" target="_blank">
+                <img src="dog1.png" alt="Dog 1">
+            </a>
             <h3>Coco</h3>
             <p>Sweet and always by your side.</p>
             <div class="dog-details">
@@ -337,27 +339,33 @@
             </div>
         </div>
         <div class="dog-box">
-            <img src="dog2.png" alt="Dog 2">
+            <a href="dog2.png" target="_blank">
+                <img src="dog2.png" alt="Dog 2">
+            </a>
             <h3>Cupcake</h3>
             <p>Loyal and loves attention.</p>
             <div class="dog-details">
-                <p><strong>Breed:</strong>Chiuahua</p>
+                <p><strong>Breed:</strong> Chihuahua</p>
                 <p><strong>Age:</strong> 4 years</p>
                 <p><strong>Additional:</strong> Hypoallergenic, great for families</p>
             </div>
         </div>
         <div class="dog-box">
-            <img src="dog3.png" alt="Dog 3">
+            <a href="dog3.png" target="_blank">
+                <img src="dog3.png" alt="Dog 3">
+            </a>
             <h3>Buttons</h3>
             <p>Curious and loves to explore.</p>
             <div class="dog-details">
-                <p><strong>Breed:</strong>Australian Shepherd Mix</p>
+                <p><strong>Breed:</strong> Australian Shepherd Mix</p>
                 <p><strong>Age:</strong> 1 year</p>
                 <p><strong>Additional:</strong> Has a keen sense of smell</p>
             </div>
         </div>
         <div class="dog-box">
-            <img src="dog4.png" alt="Dog 4">
+            <a href="dog4.png" target="_blank">
+                <img src="dog4.png" alt="Dog 4">
+            </a>
             <h3>Peaches</h3>
             <p>Friendly, with a little sass.</p>
             <div class="dog-details">
@@ -367,7 +375,9 @@
             </div>
         </div>
         <div class="dog-box">
-            <img src="dog5.png" alt="Dog 5">
+            <a href="dog5.png" target="_blank">
+                <img src="dog5.png" alt="Dog 5">
+            </a>
             <h3>Twix</h3>
             <p>Gentle and loves belly rubs.</p>
             <div class="dog-details">
@@ -377,23 +387,27 @@
             </div>
         </div>
         <div class="dog-box">
-            <img src="dog6.png" alt="Dog 6">
+            <a href="dog6.png" target="_blank">
+                <img src="dog6.png" alt="Dog 6">
+            </a>
             <h3>Churro</h3>
             <p>Independent, but loves company.</p>
             <div class="dog-details">
-                <p><strong>Breed:</strong> Begal</p>
+                <p><strong>Breed:</strong> Beagle</p>
                 <p><strong>Age:</strong> 1 year</p>
                 <p><strong>Additional:</strong> Enjoys quiet time and companionship</p>
             </div>
         </div>
     </div>
 </section>
- <section id="other">
+<section id="other">
     <h2>Bunnies & Birds Available for Adoption</h2>
     <p>Location: NY</p>
     <div class="other-grid">
         <div class="other-box">
-            <img src="bunny1.jpeg" alt="Bunny 1">
+            <a href="bunny1.jpeg" target="_blank">
+                <img src="bunny1.jpeg" alt="Bunny 1">
+            </a>
             <h3>Biscuit</h3>
             <p>Hoppy and snuggly.</p>
             <div class="other-details">
@@ -403,7 +417,9 @@
             </div>
         </div>
         <div class="other-box">
-            <img src="bunny2.jpeg" alt="Bunny 2">
+            <a href="bunny2.jpeg" target="_blank">
+                <img src="bunny2.jpeg" alt="Bunny 2">
+            </a>
             <h3>Mat</h3>
             <p>Mischievous.</p>
             <div class="other-details">
@@ -413,7 +429,9 @@
             </div>
         </div>
         <div class="other-box">
-            <img src="bunny3.jpeg" alt="Bunny 3">
+            <a href="bunny3.jpeg" target="_blank">
+                <img src="bunny3.jpeg" alt="Bunny 3">
+            </a>
             <h3>Maple</h3>
             <p>Playful little fluff.</p>
             <div class="other-details">
@@ -423,7 +441,9 @@
             </div>
         </div>
         <div class="other-box">
-            <img src="bird1.jpeg" alt="Bird 1">
+            <a href="bird1.jpeg" target="_blank">
+                <img src="bird1.jpeg" alt="Bird 1">
+            </a>
             <h3>Chirpy</h3>
             <p>Perky and warm-hearted.</p>
             <div class="other-details">
@@ -433,7 +453,9 @@
             </div>
         </div>
         <div class="other-box">
-            <img src="bird2.jpeg" alt="Bird 2">
+            <a href="bird2.jpeg" target="_blank">
+                <img src="bird2.jpeg" alt="Bird 2">
+            </a>
             <h3>Peep</h3>
             <p>Loving little chirper.</p>
             <div class="other-details">
@@ -443,7 +465,9 @@
             </div>
         </div>
         <div class="other-box">
-            <img src="bird3.jpeg" alt="Bird 3">
+            <a href="bird3.jpeg" target="_blank">
+                <img src="bird3.jpeg" alt="Bird 3">
+            </a>
             <h3>Sunny</h3>
             <p>Soft and chatty.</p>
             <div class="other-details">
