--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
             <a href="bunny1.jpeg" target="_blank">
                 <img src="bunny1.jpeg" alt="Bunny 1">
             </a>
-            <h3>Biscuit</h3>
+            <h3>Antonella</h3>
             <p>Hoppy and snuggly.</p>
             <div class="other-details">
                 <p><strong>Species:</strong> Rabbit</p>
