--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
                 <li><a href="#hours">Hours</a></li>
                 <li><a href="#staff">Meet Our Team</a></li>
                 <li><a href="#philosophy">Mission</a></li>
+                <!-- Classes Dropdown Link -->
+                <li><a href="#classes">Classes</a></li>
             </ul>
         </li>
         <li class="dropdown">
@@ -49,7 +51,7 @@
         <li><a href="#contact-info">Contact</a></li>
     </ul>
 </nav>
-  
+    
   <div id="logo">
   <img src="logologo (1).png">
 </div>
