--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <ul class="dropdown-content">
                 <li><a href="#volunteer-info">Volunteer</a></li>
                 <li><a href="#hours">Hours</a></li>
-                <li><a href="#staff">Meet Our Team</a></li>
+                <li><a href="#staff">Our Team</a></li>
                 <li><a href="#philosophy">Mission</a></li>
                 <!-- Classes Dropdown Link -->
                 <li><a href="#classes">Classes</a></li>
