--- a/index.html
+++ b/index.html
@@ -315,7 +315,10 @@
     <li><strong>Participate in a phone interview:</strong> After reviewing your application, we will schedule a brief phone interview to get to know you better.</li>
     <li><strong>Attend a training session:</strong> Join our volunteer training on the first Saturday of every month to get prepared for your role.</li>
   </ol>
-
+       <br>
+ <p>
+    While volunteering is one of the best ways to help, donations are also greatly appreciated. Your generous support allows us to provide food, medical care, and shelter for our animals, ensuring they live happy and healthy lives while waiting for their forever homes. Every little bit counts!
+  </p>
   <p class="volunteer-contact">For more details, please contact us at <a href="mailto:volunteer@welovepets.com">volunteer@welovepets.com</a>.</p>
 </div>
 
